force-app/main/default/objects/QuestionMaster__c/QuestionMaster__c.object-meta.xml
<CustomObject>
    <label>Question Master</label>
    <pluralLabel>Question Masters</pluralLabel>
    <nameField>
        <label>Question Master Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Configurable questionnaire question definitions, one per Case Type, used to dynamically render the public questionnaire form.</description>
</CustomObject>