force-app/main/default/objects/QuestionMaster__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Only Active questions are shown on the public questionnaire form.</description>
</CustomField>