force-app/main/default/objects/QuestionMaster__c/fields/AnswerType__c.field-meta.xml
<CustomField>
    <fullName>AnswerType__c</fullName>
    <label>Answer Type</label>
    <required>true</required>
    <type>Picklist</type>
    <description>Drives which input control the questionnaireForm LWC renders for this question.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>