force-app/main/default/objects/QuestionMaster__c/fields/IsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRequired__c</fullName>
    <label>Is Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>When true, the questionnaire form enforces an answer for this question before submit.</description>
</CustomField>