force-app/main/default/objects/QuestionMaster__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>Options</label>
    <length>255</length>
    <type>Text</type>
    <description>Comma-separated list of selectable values. Required (enforced in the QuestionMaster admin process, not the DB) when AnswerType__c = 'Option'.</description>
</CustomField>