force-app/main/default/objects/QuestionMaster__c/fields/QuestionId__c.field-meta.xml
<CustomField>
    <fullName>QuestionId__c</fullName>
    <externalId>true</externalId>
    <label>Question Id</label>
    <type>AutoNumber</type>
    <displayFormat>Q-{0000}</displayFormat>
    <startingNumber>1</startingNumber>
    <description>Human-readable unique question identifier, auto-generated. Copied onto QuestionAnswer__c.Question_Id__c at answer time.</description>
</CustomField>