force-app/main/default/objects/QuestionMaster__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <description>Which Case Type this question applies to. Values must exactly match Case.Case_Type__c so the questionnaire can filter by it.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Branded Shop</fullName>
            </value>
            <value>
                <fullName>New Franchise Shop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>