force-app/main/default/objects/QuestionMaster__c/validationRules/Options_Required_For_Option_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Options_Required_For_Option_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(AnswerType__c, &quot;Option&quot;) &amp;&amp; ISBLANK(Options__c)</errorConditionFormula>
    <errorDisplayField>Options__c</errorDisplayField>
    <errorMessage>Options is required when Answer Type is Option.</errorMessage>
</ValidationRule>