force-app/main/default/objects/QuestionMaster__c/validationRules/QuestionText_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>QuestionText_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(QuestionText__c)</errorConditionFormula>
    <errorDisplayField>QuestionText__c</errorDisplayField>
    <errorMessage>Question Text is required.</errorMessage>
</ValidationRule>